Slowly getting closer to a first compilation....still a few more things to resolve.